--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Lanna Mattos - Pet Sitter </title>
+    
 </head>
 <body>
-    
+    <h1> Lanna Mattos - Pet Sitter </h1>
+    <h2> Você sabe o que é uma Pet Sitter? </h2>
+    <p>Pet Sitter, em português significa "babá de pet" é um profissional que cuida de animais de estimação enquanto seus donos estão ausentes. Este serviço inclui alimentação, brincadeiras, passeios, higiene e cuidados com medicamentos, se necessário. O pet sitter pode atuar na casa do animal, ou em seu próprio local, oferecendo diferentes tipos de cuidado, desde visitas pontuais até estadias mais longas. </p>
+    <p> Assista o vídeo ao lado, para melhor entender</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Tk1QF6fwARQ?si=vYeLFca87TibeBEF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
