--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
 
     <header> HARRY POTTER </header>
-    <section>
-        <div>
+    <section class="chamada">
+        <div class="chamada-texto">
             <h1> Vamos saber mais sobre os filmes do HP? </h1>
             <p>Harry Potter é uma série de sete romances de fantasia escrita pela autora britânica J. K. Rowling. A
                 série narra as aventuras de um jovem chamado Harry James Potter (Harry Tiago Potter, no Brasil), que
